--- a/Detail Video/DetVid.html
+++ b/Detail Video/DetVid.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Detail Video</title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="DetVid.css" />
     <link
@@ -71,12 +72,13 @@
       </div>
       <img class="detailt-vidio-child" alt="" src="./public/line-13.svg" />
        <!-- vidio -->
-       <div class="card-group">  
+      <div class="card-group">  
       <div class="card">
-          <video width="419" height="1"controls poster="/assets/gambr.png">
+          <video width="820" height="570"controls poster="/assets/gambr.png">
           <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
           </video>
-        </div>
+      </div>
+      </div>
       
        <!-- Navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm p-3 mb-5 bg-body-tertiary rounded fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #ffede9 0, #ffede9 25%, #cfe2e8 50%, #cfe2e8 75%, #cfe2e8 100%)">
@@ -99,20 +101,51 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About Us</a>
+              <a class="nav-link active" href="/about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Explore</a>
+              <a class="nav-link active" href="/InputSampah.html">Explore</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Content & Blog</a>
+              <a class="nav-link active" href="/a&b.html">Content & Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Marketplace</a>
             </li>
           </ul>
           <form class="d-flex">
-            <a href="Profil.html"><img src="./public/group-95.svg" alt="icon profile"></a>
+
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" id="btnprofile" data-bs-toggle="modal" data-bs-target="#exampleModal">Profile</button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+
+                    <div class="kertas">
+                    <a href="DetVid.html" id="keluar"><img src="/assets/MacOS Close.png" alt="close"></a>
+                    <img id="gambarmr" src="/assets/mrbi.png" alt="icon" >
+                    <div class="satu">
+                      <p class="selamat-datang">Selamat Datang,</p>
+                      <p class="selamat-datang2">MR. Be</p>
+                    </div>
+                      <div class="kelola">
+                        <button><img id="icon" src="/assets/Male User.png" alt="icon" ><a href="profile.html" id="text1">Kelola akun anda</a></button>
+                      </div>
+                      <div class="kelola">
+                        <button><img id="icon2" src="/assets/Logout Rounded.png" alt="icon" ><a href="profile.html" id="text2">Keluar</a></button>
+                      </div>
+                    </div>
+
+                  </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </form>
         </div>
       </div>
@@ -245,4 +278,6 @@
       }
       </script>
   </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </html>
