--- a/Detail.html
+++ b/Detail.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/Detail.css">
+    <!-- <link rel="stylesheet" href="/Detail Video/DropDown.css"> -->
   </head>
   <body>
         <!-- Navbar -->
@@ -37,22 +38,33 @@
                   </li>
                 </ul>
                 <form class="d-flex">
+                  
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Launch demo modal</button>
+                <button type="button" class="btn btn-primary" id="btnprofile" data-bs-toggle="modal" data-bs-target="#exampleModal">Profile</button>
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                        <div class="kertas">
+                        <a href="Detail.html" id="keluar"><img src="/assets/MacOS Close.png" alt="close"></a>
+                        <img id="gambarmr" src="/assets/mrbi.png" alt="icon" >
+                        <div class="satu">
+                          <p class="selamat-datang">Selamat Datang,</p>
+                          <p class="selamat-datang2">MR. Be</p>
+                        </div>
+                          <div class="kelola">
+                            <button><img id="icon" src="/assets/Male User.png" alt="icon" ><a href="profile.html" id="text1">Kelola akun anda</a></button>
+                          </div>
+                          <div class="kelola">
+                            <button><img id="icon2" src="/assets/Logout Rounded.png" alt="icon" ><a href="profile.html" id="text2">Keluar</a></button>
+                          </div>
+                        </div>
+
                       </div>
-                      <div class="modal-body">
-                        
                       </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                       </div>
                     </div>
                   </div>
