--- a/a&b.html
+++ b/a&b.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artikel dan Vidio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/a&b.css">
 </head>
 <body>
@@ -35,7 +36,38 @@
                 </li>
               </ul>
               <form class="d-flex">
-                <a href="#"><img src="/assets/icon profile.png" alt="icon profile"></a>
+                
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" id="btnprofile" data-bs-toggle="modal" data-bs-target="#exampleModal">Profile</button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+
+                        <div class="kertas">
+                        <a href="Detail.html" id="keluar" ><img src="/assets/MacOS Close.png" alt="close"></a>
+                        <img id="gambarmr" src="/assets/mrbi.png" alt="icon" >
+                        <div class="satu">
+                          <p class="selamat-datang">Selamat Datang,</p>
+                          <p class="selamat-datang2">MR. Be</p>
+                        </div>
+                          <div class="kelola">
+                            <button><img id="icon" src="/assets/Male User.png" alt="icon" ><a href="profile.html" id="text1">Kelola akun anda</a></button>
+                          </div>
+                          <div class="kelola">
+                            <button><img id="icon2" src="/assets/Logout Rounded.png" alt="icon" ><a href="profile.html" id="text2">Keluar</a></button>
+                          </div>
+                        </div>
+
+                      </div>
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </form>
             </div>
           </div>
@@ -57,17 +89,20 @@
               <video width="413" height="201"controls poster="/assets/gambr.png">
               <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
               </video>
+              <a href="/Detail Video/DetVid.html"><button id="Dvidio">Detailt Vidio</button></a>
             </div>
             <div class="card">
               <video width="413" height="201"controls poster="/assets/gambr2.png">
               <source src= "/assets/Vidio2.mp4"type="video/mp4"> 
               </video>
+              <a href="/Detail Video/DetVid.html"><button id="Dvidio">Detailt Vidio</button></a>
             </div>
             <div class="card">
               <video width="413" height="201"controls poster="/assets/gambr3.png">
               <source src= "/assets/Vidio3.mp4"type="video/mp4">
               <button>play</button> 
               </video>
+              <a href="/Detail Video/DetVid.html"><button id="Dvidio">Detailt Vidio</button></a>
             </div>
           </div>
           <!-- akhir vidio -->
@@ -98,4 +133,6 @@
           </div>
           <!-- akhir artikel -->
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </html>
